{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 303,
  "lineage": "c73e47a9-c9c9-10b1-98d9-9d2e4147ec17",
  "resources": [
    {
      "module": "module.alb_d",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:loadbalancer/app/alb-d/c8d56ff4ab1f483e",
            "arn_suffix": "app/alb-d/c8d56ff4ab1f483e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-d-2016548268.ap-northeast-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:loadbalancer/app/alb-d/c8d56ff4ab1f483e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-d",
            "preserve_host_header": false,
            "region": "ap-northeast-3",
            "security_groups": [
              "sg-034b4ab7fecc7e809"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06c4c8ed4f000d989"
              },
              {
                "subnet_id": "subnet-0e7a7caed3d0c3b9e"
              }
            ],
            "subnets": [
              "subnet-06c4c8ed4f000d989",
              "subnet-0e7a7caed3d0c3b9e"
            ],
            "vpc_id": "vpc-0a7a4d5785c1e509a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z5LXEXXYW11ES"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:loadbalancer/app/alb-d/c8d56ff4ab1f483e"
          },
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.net_d.aws_subnet.public",
            "module.net_d.aws_vpc.this",
            "module.sec_d.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb_d",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:listener/app/alb-d/c8d56ff4ab1f483e/4db69acb1bd2ca02",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:listener/app/alb-d/c8d56ff4ab1f483e/4db69acb1bd2ca02",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:loadbalancer/app/alb-d/c8d56ff4ab1f483e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-3",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:listener/app/alb-d/c8d56ff4ab1f483e/4db69acb1bd2ca02"
          },
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.alb_d.aws_lb.this",
            "module.net_d.aws_subnet.public",
            "module.net_d.aws_vpc.this",
            "module.sec_d.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb_d",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:listener/app/alb-d/c8d56ff4ab1f483e/7b6b88cd65c93641",
            "certificate_arn": "arn:aws:acm:ap-northeast-3:077672914621:certificate/b1d74670-3eea-4c66-9177-6e75bc633ea7",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:targetgroup/tg-d/a0dd16a20b8689a6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:listener/app/alb-d/c8d56ff4ab1f483e/7b6b88cd65c93641",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:loadbalancer/app/alb-d/c8d56ff4ab1f483e",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-3",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:listener/app/alb-d/c8d56ff4ab1f483e/7b6b88cd65c93641"
          },
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.alb_d.aws_lb.this",
            "module.alb_d.aws_lb_target_group.tg",
            "module.net_d.aws_subnet.public",
            "module.net_d.aws_vpc.this",
            "module.sec_d.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb_d",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:targetgroup/tg-d/a0dd16a20b8689a6",
            "arn_suffix": "targetgroup/tg-d/a0dd16a20b8689a6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:targetgroup/tg-d/a0dd16a20b8689a6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:loadbalancer/app/alb-d/c8d56ff4ab1f483e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-d",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-3",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:077672914621:targetgroup/tg-d/a0dd16a20b8689a6"
          },
          "dependencies": [
            "module.net_d.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_p",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/alb-p/14802d699279b765",
            "arn_suffix": "app/alb-p/14802d699279b765",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-p-886529055.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/alb-p/14802d699279b765",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-p",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-0d6317e1e20730e98"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-099d54d85909fa273"
              },
              {
                "subnet_id": "subnet-0e5a746cb5b1ed6f3"
              }
            ],
            "subnets": [
              "subnet-099d54d85909fa273",
              "subnet-0e5a746cb5b1ed6f3"
            ],
            "vpc_id": "vpc-02b40b118580c1179",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/alb-p/14802d699279b765"
          },
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.net_p.aws_subnet.public",
            "module.net_p.aws_vpc.this",
            "module.sec_p.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb_p",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/alb-p/14802d699279b765/61336ed703ed27c4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/alb-p/14802d699279b765/61336ed703ed27c4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/alb-p/14802d699279b765",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/alb-p/14802d699279b765/61336ed703ed27c4"
          },
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.alb_p.aws_lb.this",
            "module.net_p.aws_subnet.public",
            "module.net_p.aws_vpc.this",
            "module.sec_p.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb_p",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/alb-p/14802d699279b765/c96db29375f36220",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:077672914621:certificate/59c563eb-95dd-41ff-bd65-ec52b9271c22",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/tg-p/b88450e3318056cc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/alb-p/14802d699279b765/c96db29375f36220",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/alb-p/14802d699279b765",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/alb-p/14802d699279b765/c96db29375f36220"
          },
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.alb_p.aws_lb.this",
            "module.alb_p.aws_lb_target_group.tg",
            "module.net_p.aws_subnet.public",
            "module.net_p.aws_vpc.this",
            "module.sec_p.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb_p",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/tg-p/b88450e3318056cc",
            "arn_suffix": "targetgroup/tg-p/b88450e3318056cc",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/tg-p/b88450e3318056cc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/alb-p/14802d699279b765"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-p",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/tg-p/b88450e3318056cc"
          },
          "dependencies": [
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ep_p",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:security-group/sg-044bc1b014c81768c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044bc1b014c81768c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "sg-044bc1b014c81768c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ep_p",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "iface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-0a9987b8d85ede75e",
            "dns_entry": [
              {
                "dns_name": "vpce-0a9987b8d85ede75e-creprz2p.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0a9987b8d85ede75e-creprz2p-ap-northeast-2a.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0a9987b8d85ede75e-creprz2p-ap-northeast-2b.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ec2messages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z031108115B862Q9H0WJD"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a9987b8d85ede75e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-097bf7252b684ee9a",
              "eni-0eba40503446ec47e"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-044bc1b014c81768c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ec2messages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.110.17",
                "subnet_id": "subnet-02cab998b26d1caf8"
              },
              {
                "ipv4": "10.10.120.11",
                "subnet_id": "subnet-0e55a487df4db64c0"
              }
            ],
            "subnet_ids": [
              "subnet-02cab998b26d1caf8",
              "subnet-0e55a487df4db64c0"
            ],
            "tags": {
              "Name": "vpce-ec2messages"
            },
            "tags_all": {
              "Name": "vpce-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.ep_p.aws_security_group.vpce",
            "module.net_p.aws_subnet.app",
            "module.net_p.aws_vpc.this"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-0e24c5ff4a2907cfa",
            "dns_entry": [
              {
                "dns_name": "vpce-0e24c5ff4a2907cfa-xi2dmxh9.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e24c5ff4a2907cfa-xi2dmxh9-ap-northeast-2b.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e24c5ff4a2907cfa-xi2dmxh9-ap-northeast-2a.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "logs.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z06500892V7ZEDTHI1ZIP"
              },
              {
                "dns_name": "logs.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z0771529B00ELNRC924R"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z0305908NTLI60A37HF5"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z07706282QXJR96YKATXP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e24c5ff4a2907cfa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-074732a24cfdc8aa2",
              "eni-0e6bdda80f633bf46"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-044bc1b014c81768c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.logs",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.110.216",
                "subnet_id": "subnet-02cab998b26d1caf8"
              },
              {
                "ipv4": "10.10.120.60",
                "subnet_id": "subnet-0e55a487df4db64c0"
              }
            ],
            "subnet_ids": [
              "subnet-02cab998b26d1caf8",
              "subnet-0e55a487df4db64c0"
            ],
            "tags": {
              "Name": "vpce-logs"
            },
            "tags_all": {
              "Name": "vpce-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.ep_p.aws_security_group.vpce",
            "module.net_p.aws_subnet.app",
            "module.net_p.aws_vpc.this"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-01c7b9e2c887c9bc0",
            "dns_entry": [
              {
                "dns_name": "vpce-01c7b9e2c887c9bc0-3g7x0n6z.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-01c7b9e2c887c9bc0-3g7x0n6z-ap-northeast-2a.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-01c7b9e2c887c9bc0-3g7x0n6z-ap-northeast-2b.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssm.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z030382452BZJ6W96336"
              },
              {
                "dns_name": "ssm.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z0628913FWI3LD1BTJZR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01c7b9e2c887c9bc0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01922109a4cbbe390",
              "eni-01dff7c1de28ce383"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-044bc1b014c81768c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssm",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.110.180",
                "subnet_id": "subnet-02cab998b26d1caf8"
              },
              {
                "ipv4": "10.10.120.226",
                "subnet_id": "subnet-0e55a487df4db64c0"
              }
            ],
            "subnet_ids": [
              "subnet-02cab998b26d1caf8",
              "subnet-0e55a487df4db64c0"
            ],
            "tags": {
              "Name": "vpce-ssm"
            },
            "tags_all": {
              "Name": "vpce-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.ep_p.aws_security_group.vpce",
            "module.net_p.aws_subnet.app",
            "module.net_p.aws_vpc.this"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-03ac88d3bbc37e5fc",
            "dns_entry": [
              {
                "dns_name": "vpce-03ac88d3bbc37e5fc-90wkepdm.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-03ac88d3bbc37e5fc-90wkepdm-ap-northeast-2a.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-03ac88d3bbc37e5fc-90wkepdm-ap-northeast-2b.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z07713573OZAKYN09TGGK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03ac88d3bbc37e5fc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0092f0a94b99701b2",
              "eni-0e72f51340eea0616"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-044bc1b014c81768c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssmmessages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.110.68",
                "subnet_id": "subnet-02cab998b26d1caf8"
              },
              {
                "ipv4": "10.10.120.190",
                "subnet_id": "subnet-0e55a487df4db64c0"
              }
            ],
            "subnet_ids": [
              "subnet-02cab998b26d1caf8",
              "subnet-0e55a487df4db64c0"
            ],
            "tags": {
              "Name": "vpce-ssmmessages"
            },
            "tags_all": {
              "Name": "vpce-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.ep_p.aws_security_group.vpce",
            "module.net_p.aws_subnet.app",
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ep_p",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-0514dcadee3f39f70",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-0514dcadee3f39f70",
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0446331cd93e00116"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "service_region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "vpce-s3"
            },
            "tags_all": {
              "Name": "vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net_p.aws_route_table.app",
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_d",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:internet-gateway/igw-0a3453d3b8458eb1b",
            "id": "igw-0a3453d3b8458eb1b",
            "owner_id": "077672914621",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "medical-dr-igw"
            },
            "tags_all": {
              "Name": "medical-dr-igw"
            },
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net_d.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_d",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:route-table/rtb-0a988e788dadc67e5",
            "id": "rtb-0a988e788dadc67e5",
            "owner_id": "077672914621",
            "propagating_vgws": [],
            "region": "ap-northeast-3",
            "route": [],
            "tags": {
              "Name": "medical-dr-rt-app"
            },
            "tags_all": {
              "Name": "medical-dr-rt-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net_d.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_d",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:route-table/rtb-0affde4741c481007",
            "id": "rtb-0affde4741c481007",
            "owner_id": "077672914621",
            "propagating_vgws": [],
            "region": "ap-northeast-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3453d3b8458eb1b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "medical-dr-rt-public"
            },
            "tags_all": {
              "Name": "medical-dr-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net_d.aws_internet_gateway.igw",
            "module.net_d.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_d",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e117f0612f2901c",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-0a988e788dadc67e5",
            "subnet_id": "subnet-09edea5bbb824d6f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.net_d.aws_route_table.app",
            "module.net_d.aws_subnet.app",
            "module.net_d.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be138b1bc9780d1e",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-0a988e788dadc67e5",
            "subnet_id": "subnet-0be3e47f0ac32d7a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.net_d.aws_route_table.app",
            "module.net_d.aws_subnet.app",
            "module.net_d.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_d",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ea6cd8727b47bb",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-0affde4741c481007",
            "subnet_id": "subnet-06c4c8ed4f000d989"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.net_d.aws_internet_gateway.igw",
            "module.net_d.aws_route_table.public",
            "module.net_d.aws_subnet.public",
            "module.net_d.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000cacb14565d9325",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-0affde4741c481007",
            "subnet_id": "subnet-0e7a7caed3d0c3b9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.net_d.aws_internet_gateway.igw",
            "module.net_d.aws_route_table.public",
            "module.net_d.aws_subnet.public",
            "module.net_d.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_d",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:subnet/subnet-09edea5bbb824d6f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.20.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09edea5bbb824d6f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "medical-dr-app-ap-northeast-3a"
            },
            "tags_all": {
              "Name": "medical-dr-app-ap-northeast-3a"
            },
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "subnet-09edea5bbb824d6f4",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.net_d.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:subnet/subnet-0be3e47f0ac32d7a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.20.120.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be3e47f0ac32d7a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "medical-dr-app-ap-northeast-3b"
            },
            "tags_all": {
              "Name": "medical-dr-app-ap-northeast-3b"
            },
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "subnet-0be3e47f0ac32d7a3",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.net_d.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_d",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:subnet/subnet-06c4c8ed4f000d989",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.20.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c4c8ed4f000d989",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "medical-dr-pub-ap-northeast-3a"
            },
            "tags_all": {
              "Name": "medical-dr-pub-ap-northeast-3a"
            },
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "subnet-06c4c8ed4f000d989",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.net_d.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:subnet/subnet-0e7a7caed3d0c3b9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.20.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7a7caed3d0c3b9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "medical-dr-pub-ap-northeast-3b"
            },
            "tags_all": {
              "Name": "medical-dr-pub-ap-northeast-3b"
            },
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "subnet-0e7a7caed3d0c3b9e",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "data.aws_availability_zones.az_d",
            "module.net_d.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_d",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:vpc/vpc-0a7a4d5785c1e509a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-00e76e2982846ce11",
            "default_route_table_id": "rtb-06c9a41b95267b0c4",
            "default_security_group_id": "sg-01dd295665d2e00e3",
            "dhcp_options_id": "dopt-02c8750f081f0bbfa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7a4d5785c1e509a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c9a41b95267b0c4",
            "owner_id": "077672914621",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "medical-dr-vpc"
            },
            "tags_all": {
              "Name": "medical-dr-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.net_p",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:internet-gateway/igw-012ab6bbc0390467e",
            "id": "igw-012ab6bbc0390467e",
            "owner_id": "077672914621",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "medical-dr-igw"
            },
            "tags_all": {
              "Name": "medical-dr-igw"
            },
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_p",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:route-table/rtb-0446331cd93e00116",
            "id": "rtb-0446331cd93e00116",
            "owner_id": "077672914621",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "medical-dr-rt-app"
            },
            "tags_all": {
              "Name": "medical-dr-rt-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_p",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:route-table/rtb-0721ea4b78118b093",
            "id": "rtb-0721ea4b78118b093",
            "owner_id": "077672914621",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012ab6bbc0390467e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "medical-dr-rt-public"
            },
            "tags_all": {
              "Name": "medical-dr-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.net_p.aws_internet_gateway.igw",
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_p",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7c5f3720fdc5a22",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0446331cd93e00116",
            "subnet_id": "subnet-02cab998b26d1caf8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.net_p.aws_route_table.app",
            "module.net_p.aws_subnet.app",
            "module.net_p.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0423a44c8ef68773d",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0446331cd93e00116",
            "subnet_id": "subnet-0e55a487df4db64c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.net_p.aws_route_table.app",
            "module.net_p.aws_subnet.app",
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_p",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05199b8f1b42e7626",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0721ea4b78118b093",
            "subnet_id": "subnet-0e5a746cb5b1ed6f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.net_p.aws_internet_gateway.igw",
            "module.net_p.aws_route_table.public",
            "module.net_p.aws_subnet.public",
            "module.net_p.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a463a89fd7733ade",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0721ea4b78118b093",
            "subnet_id": "subnet-099d54d85909fa273"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.net_p.aws_internet_gateway.igw",
            "module.net_p.aws_route_table.public",
            "module.net_p.aws_subnet.public",
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_p",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:subnet/subnet-02cab998b26d1caf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cab998b26d1caf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "medical-dr-app-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "medical-dr-app-ap-northeast-2a"
            },
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "subnet-02cab998b26d1caf8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.net_p.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:subnet/subnet-0e55a487df4db64c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.10.120.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e55a487df4db64c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "medical-dr-app-ap-northeast-2b"
            },
            "tags_all": {
              "Name": "medical-dr-app-ap-northeast-2b"
            },
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "subnet-0e55a487df4db64c0",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_p",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:subnet/subnet-0e5a746cb5b1ed6f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5a746cb5b1ed6f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "medical-dr-pub-ap-northeast-2a"
            },
            "tags_all": {
              "Name": "medical-dr-pub-ap-northeast-2a"
            },
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "subnet-0e5a746cb5b1ed6f3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.net_p.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:subnet/subnet-099d54d85909fa273",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099d54d85909fa273",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "medical-dr-pub-ap-northeast-2b"
            },
            "tags_all": {
              "Name": "medical-dr-pub-ap-northeast-2b"
            },
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "subnet-099d54d85909fa273",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az_p",
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.net_p",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc/vpc-02b40b118580c1179",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-00b0e433525e84be0",
            "default_route_table_id": "rtb-03a38f2d804acb310",
            "default_security_group_id": "sg-06a50b5ff317f1ba0",
            "dhcp_options_id": "dopt-0c5e006f744c7e851",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b40b118580c1179",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a38f2d804acb310",
            "owner_id": "077672914621",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "medical-dr-vpc"
            },
            "tags_all": {
              "Name": "medical-dr-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.sec_d",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:security-group/sg-034b4ab7fecc7e809",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-034b4ab7fecc7e809",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "region": "ap-northeast-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "sg-034b4ab7fecc7e809",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "module.net_d.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sec_d",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:security-group/sg-0cdf7d072d313449a",
            "description": "App security group (only from ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdf7d072d313449a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-034b4ab7fecc7e809"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "region": "ap-northeast-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "sg-0cdf7d072d313449a",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "module.net_d.aws_vpc.this",
            "module.sec_d.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.sec_d",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].d",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:077672914621:security-group/sg-061a40972900edd0f",
            "description": "DB security group (only from App)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061a40972900edd0f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "DB from App",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cdf7d072d313449a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "region": "ap-northeast-3",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a7a4d5785c1e509a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "sg-061a40972900edd0f",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "module.net_d.aws_vpc.this",
            "module.sec_d.aws_security_group.alb",
            "module.sec_d.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.sec_p",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:security-group/sg-0d6317e1e20730e98",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6317e1e20730e98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "sg-0d6317e1e20730e98",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.net_p.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sec_p",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:security-group/sg-07d970cc08b64c1d9",
            "description": "App security group (only from ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d970cc08b64c1d9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6317e1e20730e98"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "sg-07d970cc08b64c1d9",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.net_p.aws_vpc.this",
            "module.sec_p.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.sec_p",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].p",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:security-group/sg-0b97d3479e01adbf8",
            "description": "DB security group (only from App)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b97d3479e01adbf8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "DB from App",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d970cc08b64c1d9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02b40b118580c1179"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "077672914621",
            "id": "sg-0b97d3479e01adbf8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.net_p.aws_vpc.this",
            "module.sec_p.aws_security_group.alb",
            "module.sec_p.aws_security_group.app"
          ]
        }
      ]
    }
  ]
}